current version
===============

compiling:
- added .exe extension to binaries of MinGW

interface:
- new method SCIPgetVarRedcost()
- new method SCIPnodeUpdateLowerboundLP()
- linear and knapsack constraint handler may now deal with coefficients of value zero
- parameters are now separated into basic and advanced, the latter ones have been moved to extra submenus
- new method SCIPwriteMIP()
- calling SCIPwriteLP is now possible in Solved Stage
- new parameter "maxbounddist" for SCIPincludeSepa() and constructor ObjSepa()
- new method SCIPsepaGetMaxbounddist()
- removed parameter "branchdir" from SCIPbranchVar()
- new parameters "leftchild", "eqchild", and "downchild" for SCIPbranchVar()
- new method SCIPcalcNodeselPriority()
- new parameter "estimate" for SCIPcreateChild()
- removed method SCIPnodeGetPriority()
- new method SCIPnodeGetEstimate()
- new methods SCIPgetLocalOrigEstimate() and SCIPgetLocalTransEstimate()
- new parameter "restart" for method SCIPfreeSolve()
- new method SCIPnodeGetDomchg()
- new methods SCIPboundchgGetNewbound(), SCIPboundchgGetVar(), SCIPboundchgGetBoundchgtype(),
  SCIPboundchgGetBoundtype(), SCIPboundchgIsRedundant(), SCIPdomchgGetNBoundchgs(), SCIPdomchgGetBoundchg()
- new method SCIPisStopped()
- SCIPgetVarStrongbranch() now also returns lperror == TRUE if the solving process should be stopped, e.g., because
  of a time limit
- new method SCIProwIsInGlobalCutpool()
- removed parameter "lowestboundfirst" from SCIPincludeNodesel()
- replaced methods SCIPvarGetClosestVlb() and SCIPvarGetClosestVub() from pub_var.h by new methods
  SCIPgetVarClosestVlb() and SCIPgetVarClosestVlb() in scip.h

plugins:
- new improvement heuristic "oneopt"
- improved performance of linear constraint propagation by delaying some floor/ceil calculations
- new node selection rule "estimate" (best estimate search)
- best estimate search is now used in all large neighborhood search heuristics
- new heuristic "actconsdiving" following an idea of John Chinneck